# composite

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  DEVELOPERS.txt  INSTALL.txt  README.txt  composite.desktop.in  composite_0.006.1.orig.tar.bz2.delta  composite_0.006.1.orig.tar.bz2.id  composite_0.006.2+dfsg0.orig.tar.bz2.delta  composite_0.006.2+dfsg0.orig.tar.bz2.id  composite_0.006.2.orig.tar.bz2.delta  composite_0.006.2.orig.tar.bz2.id  composite_0.006.orig.tar.bz2.delta  composite_0.006.orig.tar.bz2.id  config.h.in  version.cpp.in
src/Tritium/: CMakeLists.txt
src/Tritium/Tritium/: ADSR.hpp  Action.hpp  AudioPort.hpp  AudioPortManager.hpp  DataPath.hpp  DefaultMidiImplementation.hpp  Engine.hpp  EngineInterface.hpp  EventQueue.hpp  H2Exception.hpp  Instrument.hpp  InstrumentLayer.hpp  InstrumentList.hpp  JackTimeMasterEvents.hpp  LocalFileMng.hpp  Logger.hpp  MidiImplementation.hpp  MidiImplementationBase.hpp  MidiMap.hpp  Mixer.hpp  MixerImpl.hpp  Note.hpp  ObjectBundle.hpp  Pattern.hpp  Playlist.hpp  Preferences.hpp  Presets.hpp  RingBufferNPT.hpp  Sample.hpp  Sampler.hpp  SeqEvent.hpp  SeqScript.hpp  SeqScriptIterator.hpp  Serialization.hpp  Song.hpp  SoundLibrary.hpp  Transport.hpp  TransportPosition.hpp  globals.hpp  memory.hpp  (+2 more)
src/Tritium/Tritium/IO/: AudioOutput.hpp  JackOutput.hpp  MidiInput.hpp  NullDriver.hpp
src/Tritium/Tritium/fx/: Effects.hpp  LadspaFX.hpp
src/Tritium/Tritium/smf/: SMF.hpp  SMFEvent.hpp
src/Tritium/src/: ADSR.cpp  Action.cpp  AudioPortImpl.cpp  AudioPortImpl.hpp  BeatCounter.cpp  BeatCounter.hpp  DataPath.cpp  DefaultMidiImplementation.cpp  Engine.cpp  EnginePrivate.hpp  EventQueue.cpp  FLACFile.cpp  FLACFile.hpp  Instrument.cpp  InstrumentLayer.cpp  InstrumentList.cpp  InstrumentPrivate.hpp  LocalFileMng.cpp  Logger.cpp  LoggerPrivate.hpp  MidiMap.cpp  MixerImpl.cpp  MixerImplPrivate.hpp  Note.cpp  Pattern.cpp  PatternModeList.hpp  PatternModeManager.hpp  Playlist.cpp  Preferences.cpp  Presets.cpp  Sample.cpp  Sampler.cpp  SamplerPrivate.hpp  SeqEvent.cpp  SeqScript.cpp  SeqScriptIterator.cpp  SeqScriptPrivate.cpp  SeqScriptPrivate.hpp  Serialization.cpp  SerializationPrivate.hpp  (+11 more)
src/Tritium/src/IO/: DiskWriterDriver.cpp  DiskWriterDriver.hpp  FakeDriver.cpp  FakeDriver.hpp  JackClient.cpp  JackClient.hpp  JackMidiDriver.cpp  JackMidiDriver.hpp  JackOutput.cpp  MidiInput.cpp  NullDriver.cpp
src/Tritium/src/fx/: Effects.cpp  LadspaFX.cpp
src/Tritium/src/smf/: SMF.cpp  SMFEvent.cpp
src/Tritium/src/table/: TableExponential.hpp  getTableValue.hpp
src/Tritium/src/transport/: H2Transport.cpp  H2Transport.hpp  JackTimeMaster.cpp  JackTimeMaster.hpp  JackTransportMaster.cpp  JackTransportMaster.hpp  SimpleTransportMaster.cpp  SimpleTransportMaster.hpp  TransportPosition.cpp
src/Tritium/test/: CMakeLists.txt  README.test.txt  t_AudioPort.cpp  t_DefaultMidiImplementation.cpp  t_MidiImplementationBase.cpp  t_Mixer.cpp  t_ObjectBundle.cpp  t_Presets.cpp  t_Sample.cpp  t_SeqEvent.cpp  t_SeqScript.cpp  t_SeqScriptPrivate.cpp  t_Serialization-default.h2song.in  t_Serialization.cpp  t_Serialization.h2pattern  t_Serialization.h2song  t_SimpleTransportMaster.cpp  t_Song.cpp  t_TestTemplate.cpp  t_TransportPosition.cpp  t_TritiumXml.cpp  test_config.hpp.in  test_macros.hpp  test_utils.cpp  test_utils.hpp
src/Tritium/test/samples/: sine_480.46875_hz.flac  triangle_480.46875_hz.flac
src/composite-gui/: AboutDialog.cpp  AboutDialog.hpp  AudioEngineInfoForm.cpp  AudioEngineInfoForm.hpp  CMakeLists.txt  CompositeApp.cpp  CompositeApp.hpp  EventListener.hpp  ExportSongDialog.cpp  ExportSongDialog.hpp  HelpBrowser.cpp  HelpBrowser.hpp  InstrumentRack.cpp  InstrumentRack.hpp  LadspaFXProperties.cpp  LadspaFXProperties.hpp  LadspaFXSelector.cpp  LadspaFXSelector.hpp  MainForm.cpp  MainForm.hpp  PatternFillDialog.cpp  PatternFillDialog.hpp  PatternPropertiesDialog.cpp  PatternPropertiesDialog.hpp  PlayerControl.cpp  PlayerControl.hpp  PreferencesDialog.cpp  PreferencesDialog.hpp  Skin.hpp  SongPropertiesDialog.cpp  SongPropertiesDialog.hpp  SplashScreen.cpp  SplashScreen.hpp  main.cpp
src/composite-gui/AudioFileBrowser/: AudioFileBrowser.cpp  AudioFileBrowser.hpp  SampleWaveDisplay.cpp  SampleWaveDisplay.hpp
src/composite-gui/InstrumentEditor/: InstrumentEditor.cpp  InstrumentEditor.hpp  InstrumentEditorPanel.cpp  InstrumentEditorPanel.hpp  LayerPreview.cpp  LayerPreview.hpp  WaveDisplay.cpp  WaveDisplay.hpp
src/composite-gui/Mixer/: Mixer.cpp  Mixer.hpp  MixerLine.cpp  MixerLine.hpp
src/composite-gui/PatternEditor/: DrumPatternEditor.cpp  DrumPatternEditor.hpp  NotePropertiesRuler.cpp  NotePropertiesRuler.hpp  PatternEditorInstrumentList.cpp  PatternEditorInstrumentList.hpp  PatternEditorPanel.cpp  PatternEditorPanel.hpp  PatternEditorRuler.cpp  PatternEditorRuler.hpp  PianoRollEditor.cpp  PianoRollEditor.hpp
src/composite-gui/PlaylistEditor/: PlaylistDialog.cpp  PlaylistDialog.hpp
src/composite-gui/SongEditor/: SongEditor.cpp  SongEditor.hpp  SongEditorPanel.cpp  SongEditorPanel.hpp
src/composite-gui/SoundLibrary/: FileBrowser.cpp  FileBrowser.hpp  SoundLibraryExportDialog.cpp  SoundLibraryExportDialog.hpp  SoundLibraryImportDialog.cpp  SoundLibraryImportDialog.hpp  SoundLibraryPanel.cpp  SoundLibraryPanel.hpp  SoundLibraryPropertiesDialog.cpp  SoundLibraryPropertiesDialog.hpp  SoundLibraryRepositoryDialog.cpp  SoundLibraryRepositoryDialog.hpp  SoundLibrarySaveDialog.cpp  SoundLibrarySaveDialog.hpp  SoundLibraryTree.cpp  SoundLibraryTree.hpp
src/composite-gui/UI/: PreferencesDialog_UI.ui  about_dialog.ui
src/composite-gui/widgets/: Button.cpp  Button.hpp  ClickableLabel.cpp  ClickableLabel.hpp  CpuLoadWidget.cpp  CpuLoadWidget.hpp  DownloadWidget.cpp  DownloadWidget.hpp  Fader.cpp  Fader.hpp  LCD.cpp  LCD.hpp  LCDCombo.cpp  LCDCombo.hpp  MidiActivityWidget.cpp  MidiActivityWidget.hpp  MidiSenseWidget.cpp  MidiSenseWidget.hpp  PixmapWidget.cpp  PixmapWidget.hpp  Rotary.cpp  Rotary.hpp  midiTable.cpp  midiTable.hpp
src/sampler/: CMakeLists.txt  EngineLv2.cpp  EngineLv2.hpp  README.txt  composite_sampler.ttl  manifest.ttl
(+75 files in other folders)
